# honest-quant

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
assets/: summary.json
examples/: demo_synthetic.py
honest_quant/: __init__.py  __main__.py  dataset.py  eval.py  plot.py  run.py
honest_quant/data/: questions.jsonl
tests/: test_dataset.py  test_eval.py  test_plot.py  test_run.py
